config_template/speech_to_text_pod.yaml

kind: Service
apiVersion: v1
metadata:
  name: speech-to-text
spec:
  selector:
    app: speech-to-text
  ports:
   - protocol: TCP
     port: 3000
